--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,32 +61,17 @@ import Layout from '../layouts/Layout.astro';
 </div>
 
   <!-- Buttons -->
-  <div class="flex gap-5">
-    <a
-      href="#buy"
-      class="inline-block bg-green-600 hover:bg-green-700 text-white px-10 py-4 rounded-full text-lg font-semibold shadow-md transition"
-    >
-      Buy Now
-    </a>
-
-    <a
-      href="#benefits"
-      class="border border-green-600 text-green-700 px-10 py-4 rounded-full font-semibold hover:bg-green-100 transition animate-fadeIn"
-    >
-      View Benefits
-    </a>
-  </div>
+  <div class="cta-buttons mobile-cta">
+  <a class="cta-btn">Buy Now</a>
+  <a class="cta-btn outline">View Benefits</a>
+</div>
 
 </div>
   
 
       <!-- Image -->
-<div class="flex justify-end pr-16 md:pr-24">
-  <img
-    src="/oil.png"
-    alt="Luthra Coconut Oil"
-    class="w-[340px] md:w-[360px]  rounded-2xl shadow-xl hover:scale-105 transition"
-  />
+<div class="mobile-image-wrap">
+  <img src="/oil.png" class="product-image" />
 </div>
 
 
