--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,8 +70,12 @@ import Layout from '../layouts/Layout.astro';
   
 
       <!-- Image -->
-<div class="mobile-image-wrap">
-  <img src="/oil.png" class="product-image" />
+<div class="flex justify-end pr-16 md:pr-24">
+  <img
+    src="/oil.png"
+    alt="Luthra Coconut Oil"
+    class="w-[340px] md:w-[360px]  rounded-2xl shadow-xl hover:scale-105 transition"
+  />
 </div>
 
 
