--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,11 +70,12 @@ import Layout from '../layouts/Layout.astro';
   
 
       <!-- Image -->
-<div class="flex justify-end pr-16 md:pr-24">
+<!-- Image -->
+<div class="flex justify-center md:justify-end px-4 md:px-24 mt-6 md:mt-0">
   <img
     src="/oil.png"
     alt="Luthra Coconut Oil"
-    class="w-[340px] md:w-[360px]  rounded-2xl shadow-xl hover:scale-105 transition"
+    class="w-[90%] max-w-[360px] md:w-[360px] rounded-2xl shadow-xl transition md:hover:scale-105"
   />
 </div>
 
